# ratatui-vault

./: .gitignore  Cargo.toml  README.md  other_vault  sample_vault
src/: crypt.rs  error_string.rs  git_credential_helper.rs  lib.rs  main.rs  model.rs  prompt.rs  ssh_ask_pass.rs  ui.rs
src/commands/: change.rs  create.rs  diff.rs  dump.rs  mod.rs  query.rs
