[package]
description = "A terminal password manager which is minimal and auditable"
name = "ratatui_vault"
version = "0.1.0-alpha.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/decatur/ratatui-vault"
readme = "README.md"

[dependencies]
argon2 = "0.5"
base64 = "0.22"
chacha20poly1305 = "0.10"
diff = "0.1.13"
rand_chacha = { version = "0.9.0", features = ["os_rng"] }
ratatui-core = { version = "0.1.0" }
ratatui-crossterm = { version = "0.1.0" }
ratatui-textarea = { version="0.8.0", features = ["search"] }
ratatui-widgets = { version = "0.3.0" }
