[package]
description = "A terminal password manager which is minimal and auditable"
name = "ratatui_vault"
version = "0.1.0-alpha.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/decatur/ratatui-vault"
readme = "README.md"
categories = ["command-line-utilities", "text-editors", "cryptography"]
keywords = ["cli", "password", "manager", "tui"]

[dependencies]
argon2 = "0.5"

# Want std so that aead::Error impls std::error::Error.
chacha20poly1305 = { version = "0.10", features = ["std"] }
diff = "0.1.13"

# Want std so that KeyError impls std::error::Error.
linux-keyutils = { version = "0.2", features = ["std"] }
rand_chacha = { version = "0.9.0", features = ["os_rng"] }
ratatui-core = { version = "0.1.0" }
ratatui-crossterm = { version = "0.1.0" }
ratatui-textarea = { version="0.8.0", features = ["search"] }
ratatui-widgets = { version = "0.3.0" }
zeroize = { version="1.9.0", features = ["zeroize_derive"] }

